SAM-1645 use efficient object creation methods
git-svn-id: https://source.sakaiproject.org/svn/sam/trunk@106519 66ffb92e-73f9-0310-93c1-f5514f145a0a